完成：active修正、燈箱

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/snowman12320/hexschool_BS#readme",
   "dependencies": {
     "bootstrap": "^5.2.2",
-    "bootstrap-icons": "^1.9.1"
+    "bootstrap-icons": "^1.9.1",
+    "lightbox2": "^2.11.3"
   }
 }
